# brainfuck

./: Cargo.toml  LICENSE
src/: lib.rs  macros.rs
src/app/: clargs.rs  mod.rs  options.rs
src/code/: brackets.rs  command_traits.rs  commands.rs  context.rs  mod.rs  program.rs  runner.rs
src/debug/: debugger.rs  mod.rs
src/debug/event/: error.rs  event.rs  mod.rs  status.rs  warning.rs
src/parser/: brainfuck.pest  mod.rs  nparser.rs  parser_traits.rs  simple.pest  sparser.rs
src/vm/: cell.rs  macros.rs  memory.rs  mod.rs  pointer.rs
